--- a/src/components/user/login/index.css
+++ b/src/components/user/login/index.css
@@ -7,7 +7,9 @@
     display: flex;
     justify-content: center; /* Center items horizontally */
     align-items: center; /* Center items vertically */
-    height: 130vh; /* Full viewport height */
+    /* height: 50vh; */
+    padding-top: 20px;
+    padding-bottom: 50px;
     background-color: rgba(255, 143, 0, 1); /* Đổi màu nền thành rgba(255, 143, 0, 1) */
 }
 
