--- a/src/components/admin/manage_customer/add_customer/index.css
+++ b/src/components/admin/manage_customer/add_customer/index.css
@@ -19,7 +19,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    background-image: url();
+    /* background-image: url(); */
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top;
