--- a/src/components/admin/manage_customer/edit_customer/index.css
+++ b/src/components/admin/manage_customer/edit_customer/index.css
@@ -641,7 +641,7 @@
     max-width: 100%;
   }
   .edit-customer-placeholder-left {
-    width: calc(100% - 12.edit-customer-5px);
+    width: calc(100% - 12px);
     border: 0;
     outline: 0;
     font-family: var(--body-regular);
