--- a/src/components/admin/manage_order/bill_detail/customer_infor/index.css
+++ b/src/components/admin/manage_order/bill_detail/customer_infor/index.css
@@ -647,7 +647,7 @@
     max-width: 100%;
   }
   .order-detail-customer-infor-placeholder-left {
-    width: calc(100% - 12.order-detail-customer-infor-5px);
+    width: calc(100% - 12px);
     border: 0;
     outline: 0;
     font-family: var(--body-regular);
